--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,7 @@ build:
     - echo Working on branch $CI_COMMIT_REF_NAME
     - pwd
     - apt-get update
+    - apt-get install -y libssl-dev
     - ./build.sh test
     - mkdir upload
     - cp -r ../result/* upload/
@@ -26,7 +27,7 @@ functional_tests:
   script:
     - ls -l
     - apt-get update
-    - apt-get install -y libboost-filesystem-dev libsqlite3-dev libboost-program-options-dev libssl-dev
+    - apt-get install -y libssl-dev
     - upload/functional_tests
   dependencies:
     - build
