--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,7 @@ build:
     - mkdir upload
     - cp -r ../result/* upload/
     - cp ../build/libKitsunemimiSakuraNetwork/tests/functional_tests/functional_tests upload/
+    - cp ../build/libKitsunemimiSakuraNetwork/tests/memory_leak_tests/memory_leak_tests upload/
   artifacts:
     paths:
       - upload
@@ -33,3 +34,16 @@ functional_tests:
     - build
   tags:
     - docker
+
+memory_leak_tests:
+  stage: test
+  script:
+    - ls -l
+    - apt-get update
+    - apt-get install -y libssl-dev
+    - upload/memory_leak_tests
+  dependencies:
+    - build
+  tags:
+    - docker
+
