--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,6 +34,7 @@ functional_tests:
     - build
   tags:
     - docker
+    - multi-thread
 
 memory_leak_tests:
   stage: test
@@ -46,4 +47,5 @@ memory_leak_tests:
     - build
   tags:
     - docker
+    - multi-thread
 
