Change: update build-script

--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -4,26 +4,33 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
-    container: 
+    container:
       image: registry.gitlab.com/kitsudaiki/kitsunemimi-ci-docker-images/normal-tests:1.2.0
     name: build-job
     steps:
       - name: "Checkout repository"
-        uses: actions/checkout@v3
-      - name: "Check directory"
-        run: ls -l ./
+        run: |
+          # use manually clone, because with the "actions/checkout@v3" action the name of the
+          # branch can not be read by the git commands, which is necessary for the build-script
+          git clone https://github.com/kitsudaiki/${GITHUB_REPOSITORY#*/}.git
+          cd ${GITHUB_REPOSITORY#*/}
+          git checkout ${GITHUB_REF#refs/heads/}
       - name: "update package-list"
         run: apt-get update
       - name: "install missing packages"
         run: apt-get install -y libssl-dev
       - name: "Build project"
-        run: ./build.sh test
+        env:
+          CLONE_TOKEN: ${{ secrets.CLONE_TOKEN }}
+        run:  |
+          cd ${GITHUB_REPOSITORY#*/}
+          ./build.sh test
       - name: "Copy files"
         run: |
           mkdir /build_result
-          cp -r ../result/* /build_result/
-          cp ../build/libKitsunemimiSakuraNetwork/tests/functional_tests/functional_tests /build_result/
-          cp ../build/libKitsunemimiSakuraNetwork/tests/memory_leak_tests/memory_leak_tests /build_result/
+          cp -r result/* /build_result/
+          cp build/${GITHUB_REPOSITORY#*/}/tests/memory_leak_tests/memory_leak_tests /build_result/
+          cp build/${GITHUB_REPOSITORY#*/}/tests/functional_tests/functional_tests /build_result/
       - name: "Check target-directory"
         run: ls -l /build_result
       - name: Create artifact
@@ -32,45 +39,13 @@ jobs:
           name: result
           path: /build_result
 
-  functional_tests:
+  memory_leak_tests:
     needs: build
     runs-on: ubuntu-latest
-    container: 
+    container:
       image: registry.gitlab.com/kitsudaiki/kitsunemimi-ci-docker-images/normal-tests:1.2.0
-    name: functional-test-job
+    name: memory-leak-tests-job
     steps:
-      - name: "Checkout repository"
-        uses: actions/checkout@v3
-      - name: "Check directory"
-        run: ls -l ./
-      - name: "update package-list"
-        run: apt-get update
-      - name: "install missing packages"
-        run: apt-get install -y libssl-dev
-      - name: Get artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: result
-          path: /build_result
-      - name: "Check target-directory"
-        run: ls -l /build_result
-      - name: "Run test"
-        run: |
-          chmod +x /build_result/functional_tests
-          /build_result/functional_tests
-  memory_leak_test:
-    needs: build
-    runs-on: ubuntu-latest
-    container: 
-      image: registry.gitlab.com/kitsudaiki/kitsunemimi-ci-docker-images/normal-tests:1.2.0
-      volumes:
-        - build_result:/build_result
-    name: memory-leak-test-job
-    steps:
-      - name: "Checkout repository"
-        uses: actions/checkout@v3
-      - name: "Check directory"
-        run: ls -l ./
       - name: "update package-list"
         run: apt-get update
       - name: "install missing packages"
@@ -86,4 +61,39 @@ jobs:
         run: |
           chmod +x /build_result/memory_leak_tests
           /build_result/memory_leak_tests
+
+  functional_tests:
+    needs: build
+    runs-on: ubuntu-latest
+    container:
+      image: registry.gitlab.com/kitsudaiki/kitsunemimi-ci-docker-images/normal-tests:1.2.0
+    name: functional-tests-job
+    steps:
+      - name: "update package-list"
+        run: apt-get update
+      - name: "install missing packages"
+        run: apt-get install -y libssl-dev
+      - name: Get artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: result
+          path: /build_result
+      - name: "Check target-directory"
+        run: ls -l /build_result
+      - name: "Run test"
+        run: |
+          chmod +x /build_result/functional_tests
+          /build_result/functional_tests
+
+  cleanup:
+    needs: [memory_leak_tests, functional_tests]
+    runs-on: ubuntu-latest
+    container:
+      image: registry.gitlab.com/kitsudaiki/kitsunemimi-ci-docker-images/normal-tests:1.2.0
+    name: cleanup-job
+    steps:
+      - name: "Delete artifacts"
+        uses: geekyeggo/delete-artifact@v2
+        with:
+          name: result
 
